docker-java-servlets/manifests/my-servlet.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: servlet
  name: login
spec:
  selector:
    matchLabels:
      app: login
  replicas: 1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: login
    spec:
      containers:
        - name: container
          image: >-
            quay.io/yuaxu/java-servlet:latest
          ports:
            - containerPort: 8080
              protocol: TCP
          command: ["run.sh"]
---
apiVersion: v1
kind: Service
metadata:
  name: login
  namespace: servlet
spec:
  selector:
    app: login
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
