docker-java-servlets/manifests/my-servlet-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: servlet-gateway
  namespace: servlet
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 8080
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: servlet
  namespace: servlet
spec:
  hosts:
  - "*"
  gateways:
  - servlet-gateway
  http:
  - match:
    - uri:
        exact: /sayhello
    redirect:
      uri: /helloservlet/sayhello
  - match:
    - uri:
        exact: /helloservlet/sayhello
    route:
    - destination:
        host: hello.servlet.svc.cluster.local
        port:
          number: 8080
